# simpler-objects

./: .dockerignore  .gitignore  API_STANDARDIZATION.md  CLAUDE.md  PHASE_1_SUMMARY.md  PR_INSTRUCTIONS.md  README.md  migrate_checksums.sh  openapi.yaml  perf_test.sh  pyproject.toml  test_phase1.py
deploy/ansible/: .ansible-lint  README.md  ansible.cfg  site.yml
deploy/ansible/inventory/: hosts.example.yml
deploy/ansible/roles/simpler_objects_async_replicate/defaults/: main.yml
deploy/ansible/roles/simpler_objects_async_replicate/handlers/: main.yml
deploy/ansible/roles/simpler_objects_async_replicate/tasks/: main.yml
deploy/container/: Containerfile  README.md
deploy/cron/: README.md  async-replicate.cron.example  async-replicate.sh.example  locator-start.sh  object-server-start.sh  simpler-objects-reboot.cron.example
deploy/systemd/: README.md  simpler-objects-async-replicate.service  simpler-objects-async-replicate.timer  simpler-objects-async-replicate@.service  simpler-objects-async-replicate@.timer  simpler-objects-locator.service  simpler-objects-object-server.service  simpler-objects-object-server@.service
deploy/systemd/env/: async-replicate.env.example  locator.env.example  object-server.env.example
simpler_objects/: async_replicate.py  auth.py  client.py  common.py  locator_api.py  logging_config.py  object_server.py  scrub.py
tests/: conftest.py  openapi_validation.py  test_async_replicate.py  test_auth.py  test_client.py  test_common.py  test_locator_api.py  test_logging.py  test_object_server.py  test_openapi_drift.py  test_packaging.py  test_scrub.py
upload-behavior-demo/: README.md  bench_throughput.py  requests_double_upload_demo.py  test_expect100.py
(+21 files in other folders)
